# clog

./: CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/CLog/: LogMessage.hpp  Logger.hpp  Sink.hpp
source/: CLog.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  Sinks.cpp  Sinks.hpp  Utils.cpp  Utils.hpp  main.cpp
